--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="responsive.css">
-  <link rel="icon" href="images/processed_logo copy.jpg" type="image/jpg">
+  <link rel="icon" href="images/transperenttitlt-removebg-preview (1).png" type="image/jpg">
   
   <!-- Fontawesome -->
   <!-- <link href="../pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" /> -->
