--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="style.css" /> -->
-  <link rel="icon" href="images/processed_logo copy.jpg" type="image/jpg">
+  <link rel="icon" href="images/transperenttitlt-removebg-preview (1).png" type="image/jpg">
   
   <!-- Fontawesome -->
   <link href="../pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" />
